RESOLVED FIXED295856
[JSC] Fix Compatibility Issues with `timezone` in `Intl.DateTimeFormat`
https://bugs.webkit.org/show_bug.cgi?id=295856
Summary [JSC] Fix Compatibility Issues with `timezone` in `Intl.DateTimeFormat`
Keita Nonaka
Reported 2025-07-13 05:43:46 PDT
Fix compatibility issues with `timezone` in `Intl.DateTimeFormat`
Attachments
Keita Nonaka
Comment 1 2025-07-13 11:14:27 PDT
EWS
Comment 2 2025-07-18 08:15:35 PDT
Committed 297594@main (1110ee18af60): <https://commits.webkit.org/297594@main> Reviewed commits have been landed. Closing PR #47959 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-07-18 08:16:14 PDT
Note You need to log in before you can comment on or make changes to this bug.