[JSC] Fix Compatibility Issues with `timezone` in `Intl.DateTimeFormat` https://bugs.webkit.org/show_bug.cgi?id=295856

Reviewed by Darin Adler.

The Intl.DateTimeFormat constructor [1] did not align with the current TC39 specification
regarding the handling of the timeZone option.
This patch implements GetAvailableNamedTimeZoneIdentifier [2] to bring the behavior
in line with the latest TC39 spec.

[1]: https://tc39.es/ecma402/#sec-createdatetimeformat
[2]: https://tc39.es/ecma402/#sec-getavailablenamedtimezoneidentifier

* JSTests/stress/intl-canonical-gmt.js:
* JSTests/stress/intl-datetimeformat.js:
* JSTests/test262/expectations.yaml:
* Source/JavaScriptCore/runtime/IntlDateTimeFormat.cpp:
(JSC::availableNamedTimeZoneIdentifier):
(JSC::IntlDateTimeFormat::initializeDateTimeFormat):
(JSC::canonicalizeTimeZoneName): Deleted.

Canonical link: https://commits.webkit.org/297594@main